minor update, masih export & landing page

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -67,7 +67,8 @@ img {
   }
 
   .container {
-    @apply px-4 mx-auto max-w-7xl sm:px-6 lg:px-8;
+    @apply px-4 mx-auto;
+    /* @apply px-4 mx-auto max-w-7xl sm:px-6 lg:px-8; */
   }
 
   .section {
